function read lead
